# DeexcitationHandler

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  Config.cmake.in  README.md
.github/workflows/: ci.yml
Deexcitation/: DeexcitationModule.cpp  DeexcitationModule.h  G4HandlerConverter.cpp  G4HandlerConverter.h  G4HandlerFactory.cpp  G4HandlerFactory.h
Deexcitation/handler/: ExcitationHandler.cpp  ExcitationHandler.h
runner/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  TestCOLA.cpp  TestHandler.cpp
